--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,3 +1,3 @@
-<% flash.each do |flash_type, msg| %>
-  <p><%= msg %></p>
+<% flash.each do |key, value| %>
+  <%= content_tag(:p, value, class: "alert alert-#{key} text-center") %>
 <% end %>
