--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -8,8 +8,8 @@
       <% end %>
     <% end %>
   </div>
-  <div class="text-right pt-3 pr-5">
-    <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-warning mb-3" %>
+  <div class="text-center pt-3">
+    <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-primary submit-btn mb-3" %>
   </div>
   <div class="row col">
     <% @roads.each do |road| %>
