アカウント情報を更新後のリダイレクト先を修正

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -85,7 +85,7 @@
 
     <div class="text-center">
       <div class="actions">
-        <%= f.submit "更新", class: "btn btn-outline-primary execute-btn" %>
+        <%= f.submit "更新", class: "btn btn-outline-primary execute-btn", turbolinks: false %>
       </div>
     </div>
   <% end %>
