--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -57,7 +57,7 @@
   </div>
 
   <div class="text-center mt-5">
-    <p><%= link_to "投稿一覧へ", roads_path, class: "btn btn-outline-warning" %></p>
+    <p><%= link_to "投稿一覧へ", roads_path, class: "btn btn-outline-primary submit-btn" %></p>
   </div>
 
 </div>
