ナビバーのロゴをリンク化

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light navbar-style">
-  <a class="navbar-brand" href="/" style="color: #002550">
-    Tamari-Ba
-  </a>
+  <a href="/"><img class="navbar-brand" src="assets/favicon.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu" aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
