--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light navbar-style pr-5">
-  <%= link_to image_tag("favicon.png"), "/", class: "navbar-brand" %>
+  <%= link_to image_tag("logo-icon.png"), "/", class: "navbar-brand logo-image", :size => '320x480' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu" aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
