--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -30,10 +30,9 @@
 
 .page-section {
   background-color: #002550;
-  height: 800px;
+  height: 100%;
   width: 100%;
   background-size: cover;
-
 }
 
 .main-container {
@@ -52,4 +51,9 @@
     top: 0;
     background: rgba(0, 0, 0, 0.4);
     height: 800px;
+}
+
+.feature-image {
+  width: 200px;
+  height: 200px;
 }
