--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,8 @@
 <div class="container user-container my-5">
   <h2 class="text-center">アカウント編集</h2>
+  <div class="container">
+    <%= devise_error_messages %>
+  </div>
   <div class="text-center">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
