--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="row col">
     <% @roads.each do |road| %>
-      <div class="col mb-4">
+      <div class="col-sm-4 mb-4">
         <div class="card-group display: fixed;" >
           <div class="card d-flex" style="width: 18rem;">
           
