--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -117,7 +117,7 @@
   <div class="text-center pb-5">
     <h2 class="title-text pt-5 pb-2">投稿詳細</h2>
     <p class="sub-text">投稿詳細画面を開くと、登録された座標を元にマーカー設置されたマップが表示されます。</p>
-    <%= image_tag("post-show-sample.png") %>
+    <%= image_tag("post-show-sample.png", class: "col-xs-4 col-md-6 col-lg-4") %>
   </div>
 
 </section>
