--- a/app/views/roads/edit.html.erb
+++ b/app/views/roads/edit.html.erb
@@ -43,6 +43,7 @@
 
 
 <script>
+
 let mapInstance
 let geocoder
 let marker
@@ -51,6 +52,7 @@ const savedLat = <%= @road.latitude %>
 const savedLng = <%= @road.longitude %>
 
 function initMap() {
+  geocoder = new google.maps.Geocoder();
   // 保存された座標データが中心に来るように設定
   mapInstance = new google.maps.Map(document.getElementById('map'), {
     center: {lat: savedLat, lng: savedLng},
