--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -9,7 +9,7 @@
     <% end %>
   </div>
   <div class="text-center pt-3">
-    <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-primary submit-btn mb-3" %>
+    <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-primary submit-btn mb-3", data: {"turbolinks"=>false} %>
   </div>
   <div class="row col">
     <% @roads.each do |road| %>
@@ -19,14 +19,14 @@
           
             <div class="card-img-top">
               <% if road.road_images.attached? %>
-                <%= link_to image_tag(road.road_images.first, class: "show-img-link"), road_path(road) %>
+                <%= link_to image_tag(road.road_images.first, class: "show-img-link", data: {"turbolinks"=>false}), road_path(road) %>
               <% else %>
-                <%= link_to image_tag("noimage-road.png", class:"show-img-link"), road_path(road) %>
+                <%= link_to image_tag("noimage-road.png", class:"show-img-link", data: {"turbolinks"=>false}), road_path(road) %>
               <% end %>
             </div>  
 
             <div class="card-body mb-4">
-              <h5 class="card-title"><%= link_to "#{road.title}", road_path(road), {class: "show-link"} %></h5>
+              <h5 class="card-title"><%= link_to "#{road.title}", road_path(road), {class: "show-link", data: {"turbolinks"=>false}} %></h5>
               <p class="card-content"><%= road.description.truncate(15, omission: '...') %></p> 
             </div>
             <div class="text-right mr-3">
@@ -35,7 +35,7 @@
             <div class="d-flex justify-content-between mx-3">
               <div>
                 <% if current_user.id == road.user_id %>
-                  <%= link_to "編集", edit_road_path(road), class: "btn btn-outline-warning btn-sm" %>
+                  <%= link_to "編集", edit_road_path(road), class: "btn btn-outline-warning btn-sm", data: {"turbolinks"=>false} %>
                   <%= link_to "削除", road_path(road), class: "btn btn-danger btn-sm", method: :delete, data: {confirm: "削除しますか？"} %>
                 <% end%> 
               </div>
