--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -13,7 +13,7 @@
           <%= @road.description %>
           <% if current_user.id == @road.user_id %>
             <p>
-              <%= link_to "編集", edit_road_path(@road), class: "btn btn-outline-warning btn-sm" %>
+              <%= link_to "編集", edit_road_path(@road), data: {"turbolinks"=>false}, class: "btn btn-outline-warning btn-sm" %>
               <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
             </p>
           <% end %>
