--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -79,14 +79,46 @@ body {
 
 // 検索フォーム
 
-input[type="search"] {
-  width: 500px;
-  height: 40px
+dl.searchbox{
+  width: 350px;
+  position:relative;
+  background-color:#fff;
+  border:1px solid #002550;
+  border-radius: 6px;
+}
+dl.searchbox dt{
+  padding:3px;
+}
+dl.searchbox dt input{
+  width:70%;
+  height:30px;
+  line-height:30px;
+  background:none;
+  border:none;
+}
+dl.searchbox dd{
+  position:absolute;
+  top:1px;
+  right:1px;
+  width:30%;
+}
+.search-btn{
+  display:block;
+  background:#002550;
+  width:100%;
+  height:34px;
+  line-height:36px;
+  border:none;
+  border-radius: 0 6px 6px 0;
+  color:#FFF;
+  text-align:center;
+  padding: 0 20px 0;
 }
 
-.search-field {
-  font-size: 12px;
-  padding-left: 5px;
+.search-btn:hover {
+  color: #002550;
+  background:#fff;
+  border: 1.5px solid #002550;
 }
 
 
@@ -128,13 +160,15 @@ a {
 }
 
 .submit-btn {
-  width: 500px;
-  height: 40px;
-  color: #002550;
-  border: 1.5px solid #002550;
+  width: 350px;
+  position:relative;
+  background-color:#002550;
+  border-radius: 6px;
+  color: #fff;
+  border: none;
   &:hover {
-    background-color: #002550;
-    color: #FFFFFF;
-    border: none;
+    color: #002550;
+    background-color: #fff;
+    border:1px solid #002550;
   }
 }
