--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,17 +1,17 @@
 <div class="container">
   <h2 class="text-center py-5">投稿一覧</h2>
   <div class="d-flex justify-content-center">
-    <%= search_form_for @q do |f| %>
-      <%= f.search_field :title_or_description_cont, placeholder: "例) 定峰峠", class: "search-field" %>
-      <%= button_tag type: "submit" do %>
-        <i class="fas fa-search"></i>
+    <dl class="searchbox">
+      <%= search_form_for @q do |f| %>
+        <dt><%= f.search_field :title_or_description_cont, placeholder: "例) 定峰峠", class: "search-field" %></dt>
+        <dd><%= f.submit ("検索") , class: 'search-btn'%></dd>
       <% end %>
-    <% end %>
+    </dl>
   </div>
-  <div class="text-center pt-3">
+  <div class="text-center py-3">
     <%= link_to "新規投稿", new_road_path, class: "btn btn-outline-primary submit-btn mb-3", data: {"turbolinks"=>false} %>
   </div>
-  <div class="row col">
+  <div class="row col mx-auto">
     <% @roads.each do |road| %>
       <div class="col-sm-4 mb-4">
         <div class="card-group display: fixed;" >
