--- a/app/views/roads/new.html.erb
+++ b/app/views/roads/new.html.erb
@@ -10,7 +10,7 @@
 
   <p class="text-center">登録したい箇所をクリックして、マーカーを設置してください。(1つまで)</p>
 
-  <div id="map" class="mx-auto mt-3"></div>
+  <div id="map" class="map mx-auto mt-3"></div>
 
   <%= form_with model: @road, local: true do |f| %>
     <div class="d-flex justify-content-center mt-3">
@@ -96,11 +96,4 @@ function searchArea() {
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
-
-<style>
-#map {
-  height: 600px;
-  width: 600px;
-}
-</style>
 
