--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -31,6 +31,18 @@ body {
   padding-left: 5px;
 }
 
+.map {
+  height: 600px;
+  width: 600px;
+}
+
+@media only screen and (max-width:  640px) { 
+  .map {
+      width: 100%;
+    height: 450px;
+  }
+}
+
 // index
 
 // カード
@@ -124,7 +136,7 @@ dl.searchbox dd{
 
 // show
 
-#map {
+.show-map {
   height: 300px;
   width: 300px;
 }
