--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center">
       <div class="row">
         <div class="col-md-4.offset-md-4">
-          <div id="map"></div>
+          <div id="map" class="show-map"></div>
         </div>
         <div class="col">
           <h2><%= @road.title %></h2>
