--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="d-flex justify-content-center">
       <div class="row">
-        <div class="col-md-4.offset-md-4">
+        <div class="col-md-4.offset-md-4 mx-auto">
           <div id="map" class="show-map"></div>
         </div>
         <div class="col">
