--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -24,6 +24,7 @@ body {
   padding-left: 5px;
 }
 
+
 .latlng-field {
   width: 150px;
   border: none;
@@ -34,13 +35,6 @@ body {
 .map {
   height: 600px;
   width: 600px;
-}
-
-@media only screen and (max-width:  640px) { 
-  .map {
-      width: 100%;
-    height: 450px;
-  }
 }
 
 // index
@@ -137,15 +131,8 @@ dl.searchbox dd{
 // show
 
 .show-map {
-  height: 300px;
   width: 300px;
-}
-
-@media only screen and (max-width:  640px) { 
-  .showmap {
-      width: 100%;
-    height: 300px;
-  }
+  height: 300px;
 }
 
 a {
@@ -189,5 +176,19 @@ a {
     color: #002550;
     background-color: #fff;
     border:1px solid #002550;
+  }
+}
+
+
+@media only screen and (max-width:  640px) { 
+  .map {
+      width: 100%;
+    height: 450px;
+  }
+
+
+  .show-map {
+    width: 100%;
+    height: 300px;
   }
 }
