--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,23 +1,21 @@
 <div class="container py-5">
-  <div class="container">
-    <div class="d-flex justify-content-center">
-      <div class="row">
-        <div class="col-md-4.offset-md-4 mx-auto">
-          <div id="map" class="show-map"></div>
-        </div>
-        <div class="col">
-          <h2><%= @road.title %></h2>
-          <%= render 'road', {road: @road} %>
-          <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
-          <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
-          <%= @road.description %>
-          <% if current_user.id == @road.user_id %>
-            <p>
-              <%= link_to "編集", edit_road_path(@road), data: {"turbolinks"=>false}, class: "btn btn-outline-warning btn-sm" %>
-              <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
-            </p>
-          <% end %>
-        </div>
+  <div class="flexbox">
+    <div class="box1">
+      <div id="map" class="show-map"></div>
+    </div>
+    <div class="box2">
+      <div class="show-content">
+        <h2><%= @road.title %></h2>
+        <%= render 'road', {road: @road} %>
+        <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
+        <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
+        <%= @road.description %>
+        <% if current_user.id == @road.user_id %>
+          <p>
+            <%= link_to "編集", edit_road_path(@road), data: {"turbolinks"=>false}, class: "btn btn-outline-warning btn-sm" %>
+            <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
+          </p>
+        <% end %>
       </div>
     </div>
   </div>
@@ -25,7 +23,7 @@
   <div class="container mt-5">
     <div id="roads" data-roads="<%= @roads.to_json %>"></div>
       <% if @road.road_images.attached? %>
-        <div class="d-flex">
+        <div class="d-flex road-images">
           <% @road.road_images.each do |image| %>
             <%= image_tag image, width: '35%', height: '35%' %>
           <% end %>
@@ -34,7 +32,7 @@
   </div>
 
   <div class="container mt-5">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center flex-sm-column">
       <div class="col-sm-4">
         <h4>コメント一覧</h4>
           <% @comments.each do |c| %>
