--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -161,23 +161,23 @@ dl.searchbox dd{
     width: 100%;
     height: 450px;
   }
-
-  .comment-field {
-    width: 250px;
-    height: 160px;
-  }
 }
 
 
 // show
 
 .show-map {
-  width: 600px;
+  width: 100%;
   height: 300px;
 }
 
 a {
   color: #002550;
+}
+
+.comment-form {
+  width: 100%;
+  height: 160px;
 }
 
 .comment-field {
@@ -188,17 +188,15 @@ a {
 
 .comment-btn {
   margin-top: 10px;
-  text-align: right;
 }
 
 
-.contents {
+.show-container {
   width: 100%;
   max-width: 1200px;
-  margin: auto;
 }
 
-.contents img {
+.show-container .show-map {
   width: 100%;
 }
 
@@ -208,17 +206,28 @@ a {
 
 .flexbox {
   display: flex;
+  padding-top: 50px;
+  margin: 0 auto;
 }
 
-.box1 {
-  width: 55%;
-  margin: auto;
-  vertical-align: text-top;
+.map-box {
+  width: 50%;
+  padding-right: 50px;
 }
 
-.box2 {
-  width: 45%;
-  margin: auto .5rem;
+.content-box {
+  width: 50%;
+  margin: none .5rem;
+}
+
+.comment-box {
+  width: 50%;
+  padding-right: 50px;
+}
+
+.commentform-box {
+  width: 50%;
+  margin: none .5rem;
 }
 
 .show-content {
@@ -226,21 +235,39 @@ a {
   vertical-align: top;
 }
 
+.to-index-btn {
+  margin-top: 50px;
+}
+
 @media screen and (max-width: 767px) {
+
   .flexbox {
-      display: block;
+    display: block;
   }
-  .flexbox .box1 {
-      width: 100%;
-      margin: 0 auto;
+  .flexbox .map-box {
+    width: 100%;
+    margin: 0 25px;
   }
-  .flexbox .box2 {
-      width: 100%;
-      margin: 0 auto;
+  .flexbox .content-box {
+    width: 80%;
+    margin: 0 25px;
+  }
+  .flexbox .comment-box {
+    width: 100%;
+    margin: 0 25px;
+  }
+  .flexbox .commentform-box {
+    width: 80%;
+    margin: 0 25px;
   }
 
   .show-map {
     width: 100%;
     height: 300px;
+  }
+
+  .comment-form {
+    width: 100%;
+    height: 160px;
   }
 }
