--- a/app/assets/stylesheets/roads.scss
+++ b/app/assets/stylesheets/roads.scss
@@ -39,6 +39,66 @@ body {
 
 // index
 
+// PC
+.card {
+  width: calc((100% - 20px * 2) / 3);
+  margin-right: 20px;
+  margin-top: 20px;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-child(1),&:nth-child(2),&:nth-child(3) {
+    margin-top: 0;
+  }
+
+  // iPad
+  @media only screen and (max-width:  768px) {
+    width: calc((100% - 20px) / 2);
+    &:nth-child(3n) {
+      margin-right: 20px;
+    }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(1),&:nth-child(2) {
+      margin-top: 0;
+    }
+    &:nth-child(3) {
+      margin-top: 20px;
+    }
+  }
+
+  // iPhone
+  @media only screen and (max-width:  575px) {
+    width: 280px;
+    margin-right: 0;
+    &:nth-child(3n) {
+      margin-right: auto;
+    }
+    &:nth-child(2n) {
+      margin-right: auto;
+    }
+    &:nth-child(1),&:nth-child(2) {
+      margin-top: 20px;
+    }
+    &:nth-child(3) {
+      margin-top: 20px;
+    }
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 925px;
+  margin: 0 auto;
+  @media only screen and (max-width:  768px) {
+    width: 100%;
+  }
+}
+
 // カード
 
 .card-title {
@@ -46,11 +106,12 @@ body {
   color: #002550;
 }
 
-.card {
-  margin: 0 auto 60px;
-  max-width: 376px;
-  height: 370px;
-}
+// .card {
+//   margin: 0 auto 60px;
+//   max-width: 376px;
+//   height: 370px;
+// }
+
 .card-body p {
   text-align: left;
 }
@@ -154,6 +215,9 @@ dl.searchbox dd{
     background-color: #fff;
     border:1px solid #002550;
   }
+  @media only screen and (max-width:  360px) {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width:  640px) { 
@@ -166,108 +230,251 @@ dl.searchbox dd{
 
 // show
 
-.show-map {
-  width: 100%;
-  height: 300px;
-}
-
-a {
-  color: #002550;
-}
-
-.comment-form {
-  width: 100%;
-  height: 160px;
-}
-
-.comment-field {
-  resize: none;
-  width: 330px;
-  height: 160px;
-}
-
-.comment-btn {
-  margin-top: 10px;
-}
-
-
 .show-container {
-  width: 100%;
-  max-width: 1200px;
-}
-
-.show-container .show-map {
-  width: 100%;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.flexbox {
-  display: flex;
-  padding-top: 50px;
+  max-width: 960px;
   margin: 0 auto;
+  padding: 48px 20px;
+}
+
+.map-wrapper {
+  display: flex;
+  @media only screen and (max-width:  575px) {
+    display: block;
+  }
 }
 
 .map-box {
   width: 50%;
-  padding-right: 50px;
+  margin-right: 20px;
+  @media only screen and (max-width:  575px) {
+    width: 100%;
+    margin-right: 0;
+  }
+}
+
+.show-map {
+  width: 100%;
+  padding-top: 60%;
 }
 
 .content-box {
-  width: 50%;
-  margin: none .5rem;
+  @media only screen and (max-width:  575px) {
+    margin-top: 20px;
+  }
+}
+
+.road-images {
+  display: flex;
+  flex-wrap: wrap;
+  .road-image-item {
+    display: block;
+    position: relative;
+    width: calc((100% - 10px * 2) / 3);
+    padding-top: 20%;
+    margin-top: 10px;
+    margin-right: 10px;
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+    &:nth-child(1),&:nth-child(2),&:nth-child(3) {
+      margin-top: 0;
+    }
+
+    @media only screen and (max-width:  768px) {
+      width: calc((100% - 10px) / 2);
+      padding-top: 30%;
+      &:nth-child(3n) {
+        margin-right: 10px;
+      }
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+      &:nth-child(1),&:nth-child(2) {
+        margin-top: 0;
+      }
+      &:nth-child(3) {
+        margin-top: 10px;
+      }
+    }
+  
+
+    @media only screen and (max-width:  575px) {
+      width: 100%;
+      padding-top: 60%;
+      margin-right: 0;
+      &:nth-child(3n) {
+        margin-right: auto;
+      }
+      &:nth-child(2n) {
+        margin-right: auto;
+      }
+      &:nth-child(1),&:nth-child(2) {
+        margin-top: 10px;
+      }
+      &:nth-child(3) {
+        margin-top: 10px;
+      }
+    }
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  @media only screen and (max-width:  575px) {
+    display: block;
+  }
+}
+
+.comment-wrapper {
+  margin-top: 20px;
+  display: flex;
+  @media only screen and (max-width:  575px) {
+    display: block;
+  }
 }
 
 .comment-box {
   width: 50%;
-  padding-right: 50px;
+  margin-right: 20px;
+  @media only screen and (max-width:  575px) {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .commentform-box {
-  width: 50%;
-  margin: none .5rem;
+  width: calc(50% - 20px);
+  @media only screen and (max-width:  575px) {
+    width: 100%;
+  }
 }
 
-.show-content {
-  display: inline-block; 
-  vertical-align: top;
-}
-
-.to-index-btn {
-  margin-top: 50px;
-}
-
-@media screen and (max-width: 767px) {
-
-  .flexbox {
-    display: block;
-  }
-  .flexbox .map-box {
-    width: 100%;
-    margin: 0 25px;
-  }
-  .flexbox .content-box {
-    width: 80%;
-    margin: 0 25px;
-  }
-  .flexbox .comment-box {
-    width: 100%;
-    margin: 0 25px;
-  }
-  .flexbox .commentform-box {
-    width: 80%;
-    margin: 0 25px;
-  }
-
-  .show-map {
-    width: 100%;
-    height: 300px;
-  }
-
-  .comment-form {
-    width: 100%;
-    height: 160px;
+.comment-submit-btn {
+  text-align: right;
+  @media only screen and (max-width:  575px) {
+    text-align: center;
   }
 }
+
+.comment-field {
+  width: 100%;
+  height: 240px;
+  resize: none;
+}
+// .contents {
+//   width: 100%;
+//   max-width: 1200px;
+//   margin: auto;
+// }
+
+// a {
+//   color: #002550;
+// }
+
+// .comment-form {
+//   width: 100%;
+//   height: 160px;
+// }
+
+// .comment-field {
+//   resize: none;
+//   width: 330px;
+//   height: 160px;
+// }
+
+// .comment-btn {
+//   margin-top: 10px;
+// }
+
+
+// .show-container {
+//   width: 100%;
+//   max-width: 960px;
+//   margin: 0 auto;
+// }
+
+// .show-container .show-map {
+//   width: 100%;
+//   height: 300px;
+// }
+
+// .text-center {
+//   text-align: center;
+// }
+
+// .flexbox {
+//   display: flex;
+// }
+
+// .map-box {
+//   width: 50%;
+//   padding-right: 50px;
+// }
+
+// .content-box {
+//   width: 50%;
+//   margin: none .5rem;
+// }
+
+// .comment-box {
+//   width: 50%;
+//   padding-right: 50px;
+// }
+
+// .commentform-box {
+//   margin: 0 auto;
+//   margin: none .5rem;
+// }
+
+// .show-content {
+//   display: inline-block; 
+//   vertical-align: top;
+// }
+
+// .to-index-btn {
+//   margin-top: 50px;
+// }
+
+// @media screen and (max-width: 767px) {
+
+//   .show-container {
+//     width: 100px;
+//     margin: 0 auto;
+//     height: 100%;
+//   }
+
+//   .flexbox {
+//     display: block;
+//   }
+//   .flexbox .map-box {
+//     width: auto;
+//     margin: 0 auto;
+//   }
+//   .flexbox .content-box {
+//     width: auto;
+//     margin: 0 auto;
+//   }
+//   .flexbox .comment-box {
+//     width: auto;
+//     margin: 0 auto;
+//   }
+//   .flexbox .commentform-box {
+//     width: auto;
+//     margin: 0 auto;
+//   }
+
+//   .show-map {
+//     width: 100%;
+//     height: 300px;
+//   }
+
+//   .comment-form {
+//     width: 100%;
+//     height: 160px;
+//   }
+// }
