--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,10 +1,10 @@
-<div class="show-container py-5">
-  <div class="flexbox">
-    <div class="map-box">
-      <div id="map" class="show-map"></div>
-    </div>
-    <div class="content-box">
-      <div class="show-content">
+<div class="show-container">
+  <div class="contents">
+    <div class="map-wrapper">
+      <div class="map-box">
+        <div id="map" class="show-map"></div>
+      </div>
+      <div class="content-box">
         <h2><%= @road.title %></h2>
         <%= render 'road', {road: @road} %>
         <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
@@ -20,18 +20,20 @@
     </div>
   </div>
 
-  <div class="container mt-5">
+  <div class="contents mt-3">
     <div id="roads" data-roads="<%= @roads.to_json %>"></div>
       <% if @road.road_images.attached? %>
-        <div class="d-flex road-images">
+        <div class="road-images">
           <% @road.road_images.each do |image| %>
-            <%= image_tag image, width: '35%', height: '35%' %>
+            <div class="road-image-item">
+              <%= image_tag image, width: '35%', height: '35%' %>
+            </div>
           <% end %>
         </div>
       <% end %>
   </div>
 
-  <div class="flexbox">
+  <div class="comment-wrapper">
     <div class="comment-box">
       <h4>コメント一覧</h4>
       <% @comments.each do |c| %>
@@ -41,16 +43,17 @@
       <% end %>
     </div>
 
-    <div class="box2">
+    <div class="commentform-box">
       <%= form_for [@road, @comment], html: { class: "comment-form" } do |f| %>
         <%= f.text_area :content, class: "comment-field" %>
         <br>
-        <div>
+        <div class="comment-submit-btn">
           <%= f.submit 'コメントする', class: "comment-btn btn btn-outline-warning" %>
         </div>
       <% end %>
     </div>
   </div>
+
 
     <div class="text-center py-5">
       <p><%= link_to "投稿一覧へ", roads_path, class: "to-index-btn btn btn-outline-primary submit-btn" %></p>
