--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -57,3 +57,74 @@
   width: 200px;
   height: 200px;
 }
+
+// PC
+.card {
+  width: calc((100% - 20px * 2) / 3);
+  margin-right: 20px;
+  margin-top: 20px;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-child(1),&:nth-child(2),&:nth-child(3) {
+    margin-top: 0;
+  }
+
+  // iPad
+  @media only screen and (max-width:  768px) {
+    width: calc((100% - 20px) / 2);
+    &:nth-child(3n) {
+      margin-right: 20px;
+    }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(1),&:nth-child(2) {
+      margin-top: 0;
+    }
+    &:nth-child(3) {
+      margin-top: 20px;
+    }
+  }
+
+  // iPhone
+  @media only screen and (max-width:  575px) {
+    width: 280px;
+    margin-right: 0;
+    &:nth-child(3n) {
+      margin-right: auto;
+    }
+    &:nth-child(2n) {
+      margin-right: auto;
+    }
+    &:nth-child(1),&:nth-child(2) {
+      margin-top: 20px;
+    }
+    &:nth-child(3) {
+      margin-top: 20px;
+    }
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 925px;
+  margin: 0 auto;
+  @media only screen and (max-width:  768px) {
+    width: 100%;
+  }
+}
+
+// カード
+
+.card-title {
+  text-decoration: none;
+  color: #002550;
+}
+
+.card-body p {
+  text-align: left;
+}
