--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,34 +36,28 @@
   <div class="text-center">
     <h2 class="title-text py-5">最新の投稿</h2>
   </div>
+  
+  <div class="card-wrapper" >
+    <% @roads_latest3.each do |road| %>
+      <div class="card">
+        <div class="card-image">
 
-  <div class="container py-5">
-    <div class="row col">
-      <% @roads_latest3.each do |road| %>
-        <div class="col-sm-4 mb-4">
-          <div class="card-group display: fixed;" >
-            <div class="card d-flex" style="width: 18rem;">
-            
-              <div class="card-img-top">
-                <% if road.road_images.attached? %>
-                  <%= image_tag(road.road_images.first, class: "show-img-link") %>
-                <% else %>
-                  <%= image_tag("noimage-road.png", class:"show-img-link") %>
-                <% end %>
-              </div>  
+          <% if road.road_images.attached? %>
+            <%= link_to image_tag(road.road_images.first, class: "show-img-link", data: {"turbolinks"=>false}), road_path(road) %>
+          <% else %>
+            <%= link_to image_tag("noimage-road.png", class:"show-img-link", data: {"turbolinks"=>false}), road_path(road) %>
+          <% end %>
+        </div>  
 
-              <div class="card-body mb-4">
-                <h5 class="card-title"><%= road.title %></h5>
-                <p class="card-content"><%= road.description.truncate(15, omission: '...') %></p> 
-              </div>
-              <div class="d-flex justify-content-between mx-3">
-                <p class="user-name">by <%= road.user.name %></p>
-              </div>
-            </div>
-          </div>
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to "#{road.title}", road_path(road), {class: "show-link", data: {"turbolinks"=>false}} %></h5>
+          <p class="card-content"><%= road.description.truncate(30, omission: '...') %></p> 
         </div>
-      <% end %>
-    </div>
+        <div class="d-flex justify-content-between mx-3">
+          <p class="user-name">by <%= link_to "#{road.user.name}", user_path(road.user), {class: "user-link"} %></p>
+        </div>
+      </div>
+    <% end %>
   </div>
 
   <div class="text-center">
