--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@ body {
   font-family: "Noto Sans JP";
 }
 
+p {
+  font-size: 16px;
+}
+
 .pagination {
   justify-content: center;
   color: #002550;
