--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
     <% end %>
 
     <div class="text-center">
-      <%= link_to "ログインはこちら", user_session_path %>
+      <%= link_to "ログインはこちら", user_session_path, class: "signin-link" %>
     </div>
   </div>
 </div>
