LPの文言を修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col text-center">
-            <h2 class="title-text mt-0 py-5">What is Tamari-Ba?</h2>
+            <h2 class="title-text mt-0 pt-5">What is Tamari-Ba?</h2>
         </div>
     </div>
   </div>
@@ -70,12 +70,12 @@
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="100ms">
           <%= image_tag("map.png", class: "feature-image") %>
           <h4 class="title-text">Google Maps API</h4>
-          <p class="sub-text">Google Maps APIを実装しているので自分の好きなスポットにピンを立てて共有可能。</p>
+          <p class="sub-text">マップ上に自分の好きなスポットにマーカを立てて共有可能。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="300ms">
           <%= image_tag("image.png", class: "feature-image") %>
           <h4 class="title-text">画像投稿</h4>
-          <p class="sub-text">ActiveStorageを実装しており、画像の投稿もできます。１投稿に付き複数登録でき、１枚目が投稿のトップ画像になります。</p>
+          <p class="sub-text">画像の投稿もできます。１投稿に付き複数登録でき、１枚目が投稿のトップ画像になります。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="500ms">
           <%= image_tag("description.png", class: "feature-image") %>
@@ -92,12 +92,12 @@
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="100ms">
           <%= image_tag("search.png", class: "feature-image") %>
           <h4 class="title-text">検索機能</h4>
-          <p class="sub-text">Ransackにて検索機能を搭載しています。気になるスポットを検索しましょう。</p>
+          <p class="sub-text">検索機能を搭載しています。気になるスポットを検索しましょう。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="300ms">
           <%= image_tag("like.png", class: "feature-image") %>
           <h4 class="title-text">いいね機能</h4>
-          <p class="sub-text">非同期処理によるいいね機能があります。お気に入りの投稿にいいねしましょう。</p>
+          <p class="sub-text">いいね機能があります。お気に入りの投稿にいいねしましょう。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="500ms">
           <%= image_tag("comments.png", class: "feature-image") %>
