--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -7,7 +7,7 @@
       <div class="content-box">
         <h2><%= @road.title %></h2>
         <%= render 'road', {road: @road} %>
-        <p>by <%= link_to "#{@road.user.name}", user_path(@road.user) %></p>
+        <p>by <%= link_to "#{@road.user.name}", user_path(@road.user), class: "user-link" %></p>
         <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
         <%= @road.description %>
         <% if current_user.id == @road.user_id %>
@@ -37,9 +37,9 @@
     <div class="comment-box">
       <h4>コメント一覧</h4>
       <% @comments.each do |c| %>
-          <a href="/users/<%= @road.user.id %>"><%= c.user.name %>: </a>
-          <%= c.content %>
-          <hr>
+        <a class="user-link" href="/users/<%= @road.user.id %>"><%= c.user.name %>: </a>
+        <%= c.content %>
+        <hr>
       <% end %>
     </div>
 
