--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -46,7 +46,9 @@
     <% end %>
   </div>
 
-  <%= paginate @roads %>
+  <div class="py-5 pagination">
+    <%= paginate @roads %>
+  </div>
 </div>
 
 
