--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -72,16 +72,86 @@ input[type="password"] {
 }
 
 .user-card {
-  height: 200px;
+  width: calc((100% - 20px * 2) / 3);
+  margin-right: 20px;
+  margin-top: 20px;
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-child(1),&:nth-child(2),&:nth-child(3) {
+    margin-top: 0;
+  }
+
+  // iPad
+  @media only screen and (max-width:  768px) {
+    width: calc((100% - 20px) / 2);
+    &:nth-child(3n) {
+      margin-right: 20px;
+    }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(1),&:nth-child(2) {
+      margin-top: 0;
+    }
+    &:nth-child(3) {
+      margin-top: 20px;
+    }
+  }
+
+  // iPhone
+  @media only screen and (max-width:  575px) {
+    width: 280px;
+    margin-right: 0;
+    &:nth-child(3n) {
+      margin-right: auto;
+    }
+    &:nth-child(2n) {
+      margin-right: auto;
+    }
+    &:nth-child(1),&:nth-child(2) {
+      margin-top: 20px;
+    }
+    &:nth-child(3) {
+      margin-top: 20px;
+    }
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+.user-card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 925px;
+  margin: 0 auto;
+  @media only screen and (max-width:  768px) {
+    width: 100%;
+  }
+}
+
+.user-card-title {
+  text-decoration: none;
+  color: #002550;
+}
+
+.user-card-body p {
+  text-align: left;
+}
+
+.user-show-img-link {
+  width: 100%;
+  height: 180px;
 }
 
 .user-show-btn {
-  color: #FFF;
   background-color: #002550;
   border: none;
-    &:hover {
-      background-color: #FFF;
-      color: #002550;
-      border: 1.5px solid #002550;
+  width: 100%;
+  margin-bottom: 20px;
+  &:hover {
+    background-color: #FFF;
+    color: #002550;
+    border: 1.5px solid #002550;
   }
 }
