--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,39 +1,38 @@
 <div class="container index-container">
   <h2 class="text-center py-5">ユーザー一覧</h2>
 
+  <div class="user-card-wrapper">
+    <% @users.each do |user| %>
 
-  <% @users.each do |user| %>
-    <div class="card user-card" style="max-width: 540px;">
-      <div class="row no-gutters">
+      <div class="card user-card">
+        <div class="user-card-image">
+          <% if user.avatar.attached? %>
+            <%= link_to image_tag(user.avatar, class: "user-show-img-link"), user_path(user) %>
+          <% else %>
+            <%= link_to image_tag("noimage.png", class: "user-show-img-link"), user_path(user)  %>
+          <% end %>
 
-        <% if user.avatar.attached? %>
-          <%= image_tag user.avatar, width: '200px', heifht: '200px' %>
-        <% else %>
-          <%= image_tag "noimage.png", width: '200px', height: '200px' %>
-        <% end %>
+          <div class="user-card-body">
+            <div class="user-card-title">
+              <p>ユーザー名: <%= user.name %></p>
+              <% if user.bike_name == nil %>
+                <p>バイク: ------</p>
+              <% else %>
+                <p>バイク: <%= user.bike_name %></p>
+              <% end %>
 
-        <div class="card-body">
-          <h5 class="card-title">
-            <p>ユーザー名: <%= user.name %></p>
-            <% if user.bike_name == nil %>
-              <p>バイク: ------</p>
-            <% else %>
-              <p>バイク: <%= user.bike_name %></p>
-            <% end %>
-
-            <% if user.prefecture_id == nil %>
-              <p>都道府県: ------</p>
-            <% else %>
-              <p>都道府県: <%= @prefectures.find(user.prefecture_id).name %></p>
-            <% end %>
-
-            <%= link_to "詳細", user_path(user.id), class: "btn btn-primary user-show-btn" %>
+              <% if user.prefecture_id == nil %>
+                <p>都道府県: ------</p>
+              <% else %>
+                <p>都道府県: <%= @prefectures.find(user.prefecture_id).name %></p>
+              <% end %>
+              <%= link_to "詳細", user_path(user.id), class: "btn btn-primary user-show-btn" %>
+            </div>
           </div>
         </div>
-
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 
 
