--- a/app/views/roads/edit.html.erb
+++ b/app/views/roads/edit.html.erb
@@ -8,7 +8,6 @@
     </dl>
   </div>
 
-
   <p class="text-center">マーカーを更新したい場合は設置したい場所をクリックしてください。</p>
   <div id="map" class="map mx-auto mt-3"></div>
 
@@ -19,25 +18,30 @@
         経度: <%=f.text_field :longitude, class: "latlng-field mx-auto" %>
       </p>
     </div>
-      <% if @road.road_images.present? %>
-        <p class="text-center">現在投稿されている画像(削除するものはチェックしてください)</p>
-        <% @road.road_images.each do |image| %>
-          <p class="d-flex justify-content-center">
-            <%= f.check_box :road_image_ids, {multiple: true}, image.id, false %>
-            <%= image_tag image, width: '300px', height: '200px' %>
-          </p>
-        <% end %>
+
+    <% if @road.road_images.present? %>
+      <p class="text-center">現在投稿されている画像(削除するものはチェックしてください)</p>
+      <% @road.road_images.each do |image| %>
+        <p class="d-flex justify-content-center">
+          <%= f.check_box :road_image_ids, {multiple: true}, image.id, false %>
+          <%= image_tag image, width: '300px', height: '200px' %>
+        </p>
       <% end %>
+    <% end %>
     
+    <div class="text-center">
+      <%= f.label :title, "タイトル" %>
       <div class="text-center">
-        <%= f.label :title, "タイトル" %>
-        <div class="text-center">
-          <p><%= f.text_field :title, class: "title-field" %></p>
-        </div>
-        <%= f.label :description, "説明文" %>
-        <p><%= f.text_area :description, class: "description-field" %></p>
-        <%= f.submit '更新する', class: "btn btn-outline-primary submit-btn" %>
+        <p><%= f.text_field :title, class: "title-field" %></p>
       </div>
+      <%= f.label :description, "説明文" %>
+      <p><%= f.text_area :description, class: "description-field" %></p>
+      <%= f.submit '更新する', class: "btn btn-outline-primary submit-btn" %>
+    </div>
+
+    <div class="text-center pt-5">
+      <p><%= link_to "編集キャンセル", roads_path, class: "to-index-btn btn btn-outline-primary submit-btn" %></p>
+    </div>
 
   <% end %>
 </div>
