indexページに投稿日を表示

--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -31,6 +31,7 @@
 
         <div class="text-right mr-3">
           <%= render partial: 'road', locals: {road: road} %>
+          <%= l road.created_at %>
         </div>
         <div class="d-flex justify-content-between mx-3">
           <div>
