--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-light navbar-style pr-5">
-  <%= link_to image_tag("logo-icon.png"), roads_path, class: "navbar-brand logo-image" %>
+  <% if user_signed_in? %>
+    <%= link_to image_tag("logo-icon.png"), roads_path, class: "navbar-brand logo-image" %>
+  <% else %>
+    <%= link_to image_tag("logo-icon.png"), root_path, class: "navbar-brand logo-image" %>
+  <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#responsiveMenu" aria-controls="responsiveMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
