--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,16 +10,16 @@
   <% if user_signed_in? %>
     <div class="collapse navbar-collapse" id="responsiveMenu">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item active mr-3">
           <%= link_to "トップページ", root_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown mr-3">
           <%= link_to "スポット一覧", roads_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item  mr-3">
           <%= link_to "ユーザー一覧", users_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown mr-3">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             マイページ
           </a>
