--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -87,7 +87,7 @@
     <div class="text-center">
       <p><%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn warning-btn" %></p>
 
-      <%= link_to "トップページ", root_path %>
+      <%= link_to "編集キャンセル", roads_path, class: "btn btn-outline-primary execute-btn" %>
     </div>
   </div>
 </div>
