管理者権限を持つアカウントに投稿削除権限を付与

--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -35,7 +35,7 @@
         </div>
         <div class="d-flex justify-content-between mx-3">
           <div>
-            <% if current_user.id == road.user_id %>
+            <% if current_user.id == road.user_id || current_user.admin == true %>
               <%= link_to "編集", edit_road_path(road), class: "btn btn-outline-warning btn-sm", data: {"turbolinks"=>false} %>
               <%= link_to "削除", road_path(road), class: "btn btn-danger btn-sm", method: :delete, data: {confirm: "削除しますか？"} %>
             <% end%> 
