--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -10,7 +10,7 @@
         <p>by <%= link_to "#{@road.user.name}", user_path(@road.user), class: "user-link" %></p>
         <p><%= @road.created_at.strftime('%Y/%m/%d') %></p>
         <%= @road.description %>
-        <% if current_user.id == @road.user_id %>
+        <% if current_user.id == @road.user_id || current_user.admin == true %>
           <p>
             <%= link_to "編集", edit_road_path(@road), data: {"turbolinks"=>false}, class: "btn btn-outline-warning btn-sm" %>
             <%= link_to "削除", road_path(@road), class: "btn btn-danger btn-sm", method: :delete, data: { confirm: "削除しますか?" } %>
