LP画面に新規投稿の紹介を表示

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -111,6 +111,12 @@
   </section>
 
   <div class="text-center pb-5">
+    <h2 class="title-text pt-5 pb-2">新規投稿</h2>
+    <p class="sub-text">検索で目的のエリアをすぐに表示でき、任意の箇所にマーカーを立てて投稿ができます。</p>
+    <%= image_tag("new_road.png", class: "col-xs-4 col-md-6 col-lg-4") %>
+  </div>
+
+  <div class="text-center pb-5">
     <h2 class="title-text pt-5 pb-2">投稿詳細</h2>
     <p class="sub-text">投稿詳細画面を開くと、登録された座標を元にマーカー設置されたマップが表示されます。</p>
     <%= image_tag("post-show-sample.png", class: "col-xs-4 col-md-6 col-lg-4") %>
