ゲストログインボタンを編集

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
                 <%= link_to "ログインはこちら", user_session_path, class: "btn warning-btn" %>
               </div>
               <div class="my-3">
-                <%= link_to "ゲストログイン(採用担当者様)", users_guest_sign_in_path, method: :post, class: "btn warning-btn" %>
+                <%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post, class: "btn warning-btn" %>
               </div>
             <% end %>
         </div>
