lpの文を修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
             <hr class="divider" />
         </div>
         <div class="col-lg-8 align-self-baseline">
-            <p class="sub-text">Tamari-Baは全国のバイク乗りのおすすめスポットを投稿するWEBアプリ。<br>バイク乗りのTamari-Baで自分の好きな峠、シーサイド、道の駅などについて語ろう。</p>
+            <p class="sub-text">『Tamari-Ba』は全国のバイク乗りのおすすめスポットを投稿するWEBアプリ。<br>バイク乗りのTamari-Baで自分の好きな峠、シーサイド、道の駅などについて語ろう。</p>
             <% if user_signed_in? %>
               <%= link_to "アプリトップへ", roads_path, class: "btn warning-btn" %>
             <% else %>
@@ -72,7 +72,7 @@
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="100ms">
           <%= image_tag("map.png", class: "feature-image") %>
           <h4 class="title-text">Google Maps API</h4>
-          <p class="sub-text">マップ上に自分の好きなスポットにマーカを立てて共有可能。</p>
+          <p class="sub-text">マップ上に自分の好きなスポットにマーカーを立てて共有可能です。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="300ms">
           <%= image_tag("image.png", class: "feature-image") %>
