lpの文を修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="300ms">
           <%= image_tag("image.png", class: "feature-image") %>
           <h4 class="title-text">画像投稿</h4>
-          <p class="sub-text">画像の投稿もできます。１投稿に付き複数登録でき、１枚目が投稿のトップ画像になります。</p>
+          <p class="sub-text">画像の投稿もできます。１投稿に複数登録でき、１枚目が投稿のサムネイル画像になります。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="500ms">
           <%= image_tag("description.png", class: "feature-image") %>
@@ -99,12 +99,12 @@
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="300ms">
           <%= image_tag("like.png", class: "feature-image") %>
           <h4 class="title-text">いいね機能</h4>
-          <p class="sub-text">いいね機能があります。お気に入りの投稿にいいねしましょう。</p>
+          <p class="sub-text">お気に入りの投稿にはいいねができます。好きな場所を見つけたらいいねしましょう。</p>
         </div>
         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="500ms">
           <%= image_tag("comments.png", class: "feature-image") %>
           <h4 class="title-text">コメント機能</h4>
-          <p class="sub-text">各投稿にコメントを残せます。もし共感できるスポットがあれば語り合いましょう。</p>
+          <p class="sub-text">各投稿にはコメントを残せます。もし共感できるスポットがあれば語り合いましょう。</p>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
 
   <div class="text-center pb-5">
     <h2 class="title-text pt-5 pb-2">投稿詳細</h2>
-    <p class="sub-text">投稿詳細画面を開くと、登録された座標を元にマーカー設置されたマップが表示されます。</p>
+    <p class="sub-text">投稿詳細画面では、登録された座標にマーカーを設置されたマップが表示されます。</p>
     <%= image_tag("post-show-sample.png", class: "col-xs-4 col-md-6 col-lg-4") %>
   </div>
 
